@@ -23,7 +23,8 @@ v3.4.5 to
 - Prohibit storing to persistent registers when they don't exist.
 - Fix several bugs in the formatting of variable-length properties.
 - Check cargo types against the cargo translation table.
-- Support \2ror and \2rot for Adv2 op 11.
+- add \2ror and \2rot for Adv2 op 11.
+- Add \d<YMD> and \d<DMY> to generate long format intro dates.
 
 v3.4.4 to v3.4.5 (r1396)
 - Data file updates:
